Updated first test, added Cucumber dependencies and 'brief' feature